# hkstringgen

./: Cargo.toml  README.md
DEPENDENCY_LICENSES/: gtk-rs
src/: main.rs
