[package]
name = "hkstringgen-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
getrandom = "0.2.14"
mouse_position = "0.1.3"
rand = "0.8.5"
rand_core = "0.6.4"
