[package]
name = "hkstringgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = "0.2.14"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_12"] }
mouse_position = "0.1.3"
rand = "0.8.5"
rand_core = "0.6.4"
